Fixed bug with scrollbar on page transition

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,26 +3,32 @@
 @tailwind utilities;
 
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  overflow-y: scroll;
+  /* scrollbar-width: initial !important; */
 }
 
 .move-header {
-  padding-right: 17px;
+  /* padding-right: 17px; */
 }
 
 .page-transition {
   will-change: clip-path;
   width: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   visibility: visible;
   z-index: 49;
   padding-top: 95px;
   background: white;
+  overflow-y: scroll !important;
+  scrollbar-width: none !important;
+  /* scrollbar-width: 27px; */
   /* overflow-y: scroll; */
-  overflow-x: hidden;
+  /* overflow: hidden; */
+  /* scrollbar-width: none; */
 }
 
 .nav {
